--- a/.gitignore
+++ b/.gitignore
@@ -8,20 +8,19 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
-dist
+.yarn
+.dist
 dist-ssr
 *.local
 
 # Editor directories and files
-.github
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
+.env
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-.env
