--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "globals": "^15.4.0",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
