--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0",
-    "vite-plugin-environment": "^1.1.3"
+    "vite-plugin-environment": "^1.1.3",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
