--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.0",
     "@ant-design/icons": "^5.3.7",
     "@firebase/database": "^1.0.5",
     "@mui/icons-material": "^5.15.20",
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-query-devtools": "^5.49.2",
+    "@types/styled-components": "^5.1.34",
     "antd": "^5.18.3",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
@@ -26,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
